# bilinovel_cli

./: AGENT.md  README.md  README_en.md  main.py  pyproject.toml
bilinovel_cli/cli/: __init__.py  browser_selector.py  commands.py  config_manager.py  console.py  formatters.py  selector.py
bilinovel_cli/core/: __init__.py  fetcher.py  parser.py  rubbish_map.json  storage.py
docs/: DESIGN.md
