[project]
name = "bilinovel-cli"
version = "0.1.0"
description = "A CLI tool for scraping novels from bilinovel (哔哩轻小说)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.40.0",
    "playwright-stealth>=2.0.0",
    "lxml>=5.0.0",
    "rich>=13.0.0",
    "readchar>=4.0.0",
]

[project.scripts]
bilinovel = "bilinovel_cli.cli.commands:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bilinovel_cli"]
